--- a/package.json
+++ b/package.json
@@ -4,15 +4,15 @@
   "description": "The back-end project is focused on creating a server for the WTWR application. You’ll gain a deeper understanding of how to work with databases, set up security and testing, and deploy web applications on a remote machine. The eventual goal is to create a server with an API and user authorization.\r ## Running the Project\r `npm run start` — to launch the server",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
     "lint": "npx eslint .",
-    "start": "node app.js"
+    "start": "node app.js",
+    "dev": "nodemon app.js"
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/taxidriver802/se_project_express.git"
   },
-  "author": "Jason",
+  "author": "Jason Cox",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/taxidriver802/se_project_express/issues"
