--- a/.github/workflows/tests-12.yml
+++ b/.github/workflows/tests-12.yml
@@ -1,4 +1,4 @@
-name: "Tests Project 12: ${{ github.event.head_commit.message }}"
+run-name: "Tests Project 12: ${{ github.event.head_commit.message }}"
 
 on:
   push:
