--- a/.github/workflows/tests-12.yml
+++ b/.github/workflows/tests-12.yml
@@ -21,25 +21,9 @@ jobs:
         id: sprint
         run: echo "SPRINT_NUMBER=$(cat sprint.txt)" >> $GITHUB_OUTPUT
 
-  lint:
-    runs-on: ubuntu-latest
-    needs: read_sprint_file
-    if: ${{ needs.read_sprint_file.outputs.sprint == '12' }}
-    steps:
-      - name: Set up GitHub Actions
-        uses: actions/checkout@v4
-      - name: Use Node.js 20.x
-        uses: actions/setup-node@v4
-        with:
-          node-version: 20.x
-      - name: Install dependencies
-        run: npm install
-      - name: Run ESLint
-        run: npx eslint .
-
   test_config:
     runs-on: ubuntu-latest
-    needs: [read_sprint_file, lint]
+    needs: [read_sprint_file]
     if: ${{ needs.read_sprint_file.outputs.sprint == '12' }}
     steps:
       - name: Set up GitHub Actions
@@ -57,7 +41,7 @@ jobs:
 
   test_endpoints:
     runs-on: ubuntu-latest
-    needs: [read_sprint_file, lint]
+    needs: [read_sprint_file]
     if: ${{ needs.read_sprint_file.outputs.sprint == '12' }}
     steps:
       - name: Set up GitHub Actions
